2023-10-16T16:18:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6536397753 # 1289
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-16
* notice: last 14d: unq all: 5 37
* notice: prev accum: outdated-unq outdated-all / unq all: 525 893 / 550 931
* notice: next accum: outdated-unq outdated-all / unq all: 526 895 / 550 932
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2023-10-02] / [2023-10-16]

2023-10-16T08:18:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6530888151 # 1288
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-16
* notice: last 14d: unq all: 5 37
* notice: prev accum: outdated-unq outdated-all / unq all: 525 893 / 548 929
* notice: next accum: outdated-unq outdated-all / unq all: 525 893 / 550 931
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2023-10-16]

2023-10-16T01:02:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6527669735 # 1287
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-16
* notice: last 14d: unq all: 5 35
* notice: prev accum: outdated-unq outdated-all / unq all: 523 889 / 548 929
* notice: next accum: outdated-unq outdated-all / unq all: 525 893 / 548 929
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [2023-10-01] / [2023-10-02]

2023-10-15T16:15:44Z: