@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-10-04T01:02:28Z",
-  "count" : 3,
+  "timestamp" : "2023-10-17T01:01:21Z",
+  "count" : 2,
   "count_minmax" : [ 2, 3 ],
-  "count_decinc" : [ -0, +3 ],
+  "count_decinc" : [ -1, +3 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
