@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-10-16T16:18:30Z",
-  "count" : 3,
-  "count_minmax" : [ 2, 3 ],
-  "count_decinc" : [ -0, +3 ],
+  "timestamp" : "2023-10-17T01:01:21Z",
+  "count" : 4,
+  "count_minmax" : [ 2, 4 ],
+  "count_decinc" : [ -0, +4 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
