@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-10-16T16:18:30Z",
+  "timestamp" : "2023-10-17T01:01:21Z",
   "count_outdated" : 895,
   "uniques_outdated" : 526,
-  "count" : 932,
+  "count" : 933,
   "uniques" : 550,
   "clones" : [
     {
       "timestamp": "2023-10-03T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 2, 3 ],
-      "count_decinc": [ 0, 3 ],
+      "count_decinc": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
@@ -115,9 +115,9 @@
     },
     {
       "timestamp": "2023-10-16T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 2, 3 ],
-      "count_decinc": [ 0, 3 ],
+      "count": 4,
+      "count_minmax": [ 2, 4 ],
+      "count_decinc": [ 0, 4 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
