@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2023-10-03T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 2
     },
     {
@@ -64,7 +64,7 @@
     },
     {
       "timestamp": "2023-10-16T00:00:00Z",
-      "count": 3,
+      "count": 4,
       "uniques": 2
     }
   ]
