@@ -1,3 +1,12 @@
+2023-10-17T01:01:21Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6541130104 # 1290
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-17
+* notice: last 14d: unq all: 5 37
+* notice: prev accum: outdated-unq outdated-all / unq all: 526 895 / 550 932
+* notice: next accum: outdated-unq outdated-all / unq all: 526 895 / 550 933
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +2 +4 -0 -0 / 2 4
+* notice: removed / changed dates: [] / [2023-10-03 2023-10-16]
+
 2023-10-16T16:18:30Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6536397753 # 1289
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-16
